# triangles

./: CMakeLists.txt  README.md
.github/workflows/: workflow.yml
include/: bounding_box.hpp  double_compare.hpp  octree.hpp  plane.hpp  point.hpp  polygons.hpp  segment.hpp  triangle.hpp  vector.hpp
src/: CMakeLists.txt  double_compare.cpp  main.cpp  octree.cpp  plane.cpp  point.cpp  segment.cpp  triangle.cpp  vector.cpp
tests/: CMakeLists.txt
tests/end_to_end/: answer.txt  answers.out  end_to_end_testing.sh  generate_triangles.py  test_01.in  test_02.in  test_03.in  test_04.in  test_05.in  test_06.in  test_07.in  test_08.in  test_09.in  test_10.in
tests/unit/: unit_tests.cpp
